Personalize for HTT

--- a/app/pathfinder.ini
+++ b/app/pathfinder.ini
@@ -6,7 +6,7 @@
 ;           This name is used in e.g. emails, user interface
 ; Syntax:   String
 ; Default:  Pathfinder
-NAME                        =   Pathfinder
+NAME                        =   Holier Than Thou
 
 ; Pathfinder version
 ;           Version number should not be changed manually.
@@ -20,7 +20,7 @@ VERSION                     =   v2.2.4
 ;           Shown on 'licence', 'contact' page.
 ; Syntax:   String
 ; Default:  https://github.com/exodus4d
-CONTACT                     =   https://github.com/exodus4d
+CONTACT                     =   https://github.com/temetvince
 
 ; Public contact email [optional]
 ; Syntax:   String
@@ -31,13 +31,13 @@ EMAIL                       =
 ;           Used for 'licence', 'contact' page.
 ; Syntax:   String
 ; Default:  https://github.com/exodus4d/pathfinder
-REPO                        =   https://github.com/exodus4d/pathfinder
+REPO                        =   https://github.com/temetvince/pathfinder
 
 ; Show warning on 'login' page if /setup route is active
 ;           DO NOT disable this warning unless /setup route is protected or commented in routes.ini
 ; Syntax:   0 | 1
 ; Default:  1
-SHOW_SETUP_WARNING          =   1
+SHOW_SETUP_WARNING          =   0
 
 ; Show full login page
 ;           If disabled, some section don´t appear:
@@ -75,7 +75,7 @@ MODE_MAINTENANCE            =   0
 ;           that other characters from the "switch character" menu have access to
 ; Syntax    0 | 1
 ; Default   0
-SESSION_SHARING             =  0
+SESSION_SHARING             =  1
 
 ; Login restrictions (white lists)
 ;           Login/registration can be restricted to specific groups.
@@ -84,7 +84,7 @@ SESSION_SHARING             =  0
 ; Syntax:   String (comma separated)
 ; Default:
 CHARACTER                   =
-CORPORATION                 =
+CORPORATION                 = 98757825
 ALLIANCE                    =
 
 [PATHFINDER.CHARACTER]
@@ -161,7 +161,7 @@ ADMIN                       =   templates/view/admin.html
 LIFETIME                        =   60
 MAX_COUNT                       =   3
 MAX_SHARED                      =   10
-MAX_SYSTEMS                     =   50
+MAX_SYSTEMS                     =   100
 LOG_ACTIVITY_ENABLED            =   1
 LOG_HISTORY_ENABLED             =   1
 SEND_HISTORY_SLACK_ENABLED      =   0
@@ -174,7 +174,7 @@ SEND_RALLY_Mail_ENABLED         =   0
 LIFETIME                        =   99999
 MAX_COUNT                       =   5
 MAX_SHARED                      =   4
-MAX_SYSTEMS                     =   100
+MAX_SYSTEMS                     =   500
 LOG_ACTIVITY_ENABLED            =   1
 LOG_HISTORY_ENABLED             =   1
 SEND_HISTORY_SLACK_ENABLED      =   1
@@ -187,7 +187,7 @@ SEND_RALLY_Mail_ENABLED         =   0
 LIFETIME                        =   99999
 MAX_COUNT                       =   4
 MAX_SHARED                      =   2
-MAX_SYSTEMS                     =   100
+MAX_SYSTEMS                     =   500
 LOG_ACTIVITY_ENABLED            =   0
 LOG_HISTORY_ENABLED             =   1
 SEND_HISTORY_SLACK_ENABLED      =   1
@@ -209,17 +209,17 @@ SEARCH_DEPTH                =   9000
 ; Initial count of routes that will be checked when a system becomes active
 ; Syntax:   Integer
 ; Default:  4
-SEARCH_DEFAULT_COUNT        =   4
+SEARCH_DEFAULT_COUNT        =   10
 
 ; Max count of routes that can be selected in 'route settings' dialog
 ; Syntax:   Integer
 ; Default:  6
-MAX_DEFAULT_COUNT           =   6
+MAX_DEFAULT_COUNT           =   10
 
 ; Max count of routes that will be checked (MAX_DEFAULT_COUNT + custom routes)
 ; Syntax:   Integer
 ; Default:  8
-LIMIT                       =   8
+LIMIT                       =   12
 
 ; Email notifications =============================================================================
 [PATHFINDER.NOTIFICATION]
